# FCT_StartersGuide

./: README.md  displayGeometry.cpp  displayGeometry_with_tracks.cpp  run.cc  runThesisPlots.sh
AnalysisFiles/: bremContributions.cpp  chargedParticleSpectrum.cpp  closestDistanceCutAnalysis.cpp  photSpectrumClosestDistance.cpp  photSpectrumClosestDistanceCut.cpp  photSpectrumEPIDCut.cpp  photSpectrumPACut.cpp  photonOrigin_improved.cpp  photonSpectrum.cpp  pointingAngleDistribution.cpp  runThesisPlots.sh  run_pi0Rec.sh  signal_over_background.cpp  significance.cpp
AnalysisFiles/NeutralPionRec/: pi0_pTRapidityDist.cpp  pi0_reconstruction.cpp  pi0_reconstructionClosestDistanceCut.cpp  pi0_reconstructionPACut.cpp  (+1 more)
Cherenkov_detector/: runCherenkovDetector.sh
GEANT4/: CMakeLists.txt  FCT_circular.cfg  README.md  actionInitialization.cc  actionInitialization.hh  run.cc  vis.mac
GEANT4/include/: actionInitialization.hh  constructDetector.hh  optrChangeCrossSection.hh  optrMultiParticleChangeCrossSection.hh  primaryGenerator.hh  runAction.hh  sensitiveDetector.hh
GEANT4/input/: eventFile.cfg  events.mac  vis.mac
GEANT4/src/: actionInitialization.cc  constructDetector.cc  optrChangeCrossSection.cc  optrMultiParticleChangeCrossSection.cc  primaryGenerator.cc  runAction.cc  sensitiveDetector.cc
Geometry/: Pipe.cxx  TRKVacuum.cxx  displayGeometry.cpp  displayGeometry_with_tracks.cpp  listMaterials.cpp  scanMatBudget2.cpp  toymodel_fct.py
Luminosity_studies/: luminosity_ALICE3_FCT.py
Run_Simulation/: FCT_SD.cfg  field.C  prepare_env.sh  sbatch.sh  simulation.sh
(+44 files in other folders)
